# InkFoot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  langchain_integration_gap.yml  provider_coverage_gap.yml  smell_rule_proposal.yml
.github/workflows/: ci.yml  docs.yml  live-langchain.yml  live-tests.yml  release-prerelease.yml  release-smoke.yml  release.yml
actions/diff-action/: README.md  action.yml  post_comment.py
cost-smells/: CONTRIBUTING.md  README.md
cost-smells/schema/: smell.schema.json
cost-smells/site/: build_pages.py  mkdocs.yml  requirements.txt
cost-smells/smells/: cost-skewed-by-outlier.yaml  expensive-model-low-entropy.yaml  over-instrumented-retries.yaml  oversized-tool-result-recycled.yaml  recurring-cache-writes.yaml  runaway-retry-loop.yaml  summariser-not-firing.yaml  summariser-quality-regression.yaml  tool-schema-drift.yaml  unbounded-conversation-history.yaml  unstable-prompt-prefix.yaml
cost-smells/tools/: validate_smells.py
docs/: CNAME  architecture-inkfoot.md  index.md  providers.md  quickstart.md  roadmap-inkfoot.md
docs/assets/: brand.css
docs/concepts/: accuracy.md  causal-token-ledger.md  cost-per-success.md  cost-smell-library.md  cost-smells.md  embeddings.md  langchain-integration.md  modification-policies.md  observation-policies.md  openai-responses.md  otel.md  performance.md  postgres.md  privacy.md  storage.md  streaming.md  token-contracts.md  tracking-runs.md
docs/frameworks/: anthropic-agent.md  crewai.md  langchain.md  langgraph.md  openai-agents.md  pydantic-ai.md  raw-sdk.md
docs/operations/: postgres-migration.md  services-and-multi-replica.md
docs/phases/: README.md  phase-0-classify.md  phase-1-explain.md  phase-2-enforce.md  phase-3-prove.md  phase-4-compound.md  phase-5-enterprise.md
docs/planned/: README.md
docs/recipes/: ci-bitbucket.md  ci-cost-review-langchain.md  ci-gitlab.md  extract-fixtures.md  find-expensive-agent.md  find-expensive-langchain-node.md  otel-honeycomb.md  set-up-ci.md  spot-cache-misses.md  streaming-cost-surprises.md
docs/reference/: api.md  cli.md  contract-schema-changelog.md  provider-matrix.md
inkfoot/: __init__.py  _instrument.py  _run_context.py  _run_lifecycle.py  _shim_install.py  _telemetry.py  anthropic_agent.py  crewai.py  errors.py  langgraph.py  ledger.py  money.py  openai_agents.py  pricing.py  pydantic_ai.py  run.py  tokenisers.py
inkfoot/adapters/: __init__.py  _registry.py  _shared.py  anthropic_agent.py  base.py  crewai.py  langgraph.py  openai_agents.py  pydantic_ai.py
inkfoot/benchmark/: __init__.py  runner.py  scenario.py  schema.py
inkfoot/cli/: __init__.py  aggregator_worker.py  benchmark.py  contract.py  diff.py  main.py  migrate.py  rebuild_aggregates.py  report.py  tag.py  tail.py
inkfoot/contracts/: __init__.py  check.py  draft.py  enforcer.py  loader.py  runtime.py  schema.py
inkfoot/diff/: __init__.py  compare.py  render_json.py  render_markdown.py  thresholds.py
inkfoot/langchain/: __init__.py  embeddings.py  handler.py
inkfoot/normalise/: __init__.py  anthropic.py  gemini.py  langchain.py  openai.py  openai_responses.py
inkfoot/otel/: __init__.py  conventions.py  export.py  ingest.py  mapping.py
inkfoot/outcomes/: __init__.py  _heuristics.py
inkfoot/policy/: __init__.py  _ab_pairing.py  _cheap_models.py  _events.py  budget_cap.py  cache_control_placer.py  cheap_summariser.py  lazy_tool_exposure.py  registry.py  retry_throttle.py
inkfoot/providers/: __init__.py  _registry.py  anthropic.py  base.py  bedrock.py  gemini.py  openai.py  openai_compat.py
inkfoot/reports/: __init__.py  cost_per_success.py  tag_groupby.py
inkfoot/shims/: __init__.py  _emit.py  _isolation.py  _streaming.py  anthropic.py  embeddings.py  gemini.py  openai.py  openai_responses.py
inkfoot/smells/: __init__.py  _helpers.py  cost_skewed_by_outlier.py  engine.py  expensive_model_low_entropy.py  over_instrumented_retries.py  oversized_tool_result_recycled.py  recurring_cache_writes.py  runaway_retry_loop.py  summariser_not_firing.py  summariser_quality_regression.py  tool_schema_drift.py  unbounded_conversation_history.py  unstable_prompt_prefix.py
inkfoot/storage/: __init__.py  aggregator.py  migrations.py  postgres.py  postgres_aggregator.py  postgres_migrations.py  redaction.py  sqlite.py
scripts/: build_library_snapshot.py  check_prerelease_tag.py  check_release_tag.py  extract_run_fixtures.py  validate_attribution.py
tests/benchmarks/: conftest.py  test_aggregator_perf.py  test_contract_enforcer_perf.py  test_lazy_tool_exposure_perf.py  test_postgres_aggregator_perf.py  test_postgres_perf.py  test_report_perf.py  test_shim_perf.py  test_smells_perf.py  test_storage_perf.py
tests/contract/: test_adapter_provider_matrix.py  test_framework_adapter_contract.py
tests/docs/: test_quickstart_links.py
tests/integration/: _redaction_support.py  conftest.py  test_anthropic_agent_e2e.py  test_anthropic_bedrock_e2e.py  test_anthropic_streaming_e2e.py  test_bedrock_e2e.py  test_benchmark_runner.py  test_cheap_summariser_e2e.py  test_ci_combined.py  test_contracts_runtime.py  test_contracts_summariser_seam.py  test_crewai_e2e.py  test_embeddings_live.py  test_exit_criteria.py  test_gemini_e2e.py  test_handler_responses_dedup.py  test_handler_shim_dedup.py  test_langchain_e2e.py  test_langgraph_adapter.py  test_langgraph_e2e.py  test_lazy_tool_exposure_e2e.py  test_migrate_to_postgres.py  test_openai_agents_e2e.py  test_openai_chat_streaming_e2e.py  test_openai_compat_ollama.py  test_openai_responses_e2e.py  test_openai_responses_shim_isolation.py  test_openai_responses_streaming_e2e.py  test_otel_export.py  test_otel_ingest.py  test_postgres_aggregator.py  test_postgres_storage.py  test_pydantic_ai_e2e.py  test_redaction_floor.py  test_redaction_override.py  test_streaming_dedup_ordering.py  test_streaming_redaction.py  test_tail.py
tests/unit/: _fake_sdks.py  (+91 more)
(+65 files in other folders)
