[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkfoot"
description = "Causal token economics layer for LLM agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Inkfoot maintainers" }]
keywords = ["llm", "agents", "cost", "tokens", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
dependencies = [
    "python-ulid>=2.2.0",
    "tiktoken>=0.7",
    # python-ulid 2.x uses typing_extensions.Self; pin explicitly so a
    # fresh CI runner doesn't fail on the transitive miss.
    "typing_extensions>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-benchmark>=4",
    "pyyaml>=6",
]

# Framework adapter extras. Each one pulls in the peer
# framework as an optional install so ``pip install inkfoot[langgraph]``
# gets the user a working integration without bloating the default
# install. Versions are pinned conservatively against mid-2026
# stable releases; bump with the per-framework guide page on
# inkfoot.dev when upstream lands a breaking change.
langgraph = [
    "langgraph>=0.2,<0.4",
]
openai-agents = [
    # OpenAI Agents SDK; package name on PyPI is ``openai-agents``.
    "openai-agents>=0.1,<0.3",
]
anthropic-agent = [
    # Anthropic Agent SDK; package name on PyPI tentatively
    # ``anthropic-agent`` (subject to confirmation when the SDK GAs).
    "anthropic-agent>=0.1,<0.3",
]

# Convenience meta-extra: install every framework adapter at
# once. This is the shape the ``inkfoot/diff-action`` GitHub
# Action installs in CI, so consumer scenarios can import any of
# the adapters without a per-extra dance.
all = [
    "inkfoot[langgraph,openai-agents,anthropic-agent]",
]

# Docs site build deps. Installed by `pip install inkfoot[docs]`;
# CI's docs workflow uses the same extra so the build never falls
# out of sync with the dev recipe documented in the README.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.7",
]

[project.scripts]
inkfoot = "inkfoot.cli.main:main"

[project.urls]
Homepage = "https://inkfoot.dev"
Source = "https://github.com/inkfoot/InkFoot"
Issues = "https://github.com/inkfoot/InkFoot/issues"

[tool.setuptools.packages.find]
include = ["inkfoot*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "inkfoot._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_anthropic: tests that hit a real Anthropic endpoint (skipped without API key)",
    "live_openai: tests that hit a real OpenAI endpoint (skipped without API key)",
    "slow: tests that take more than a few seconds",
]
