[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkfoot"
description = "Causal token economics layer for LLM agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Inkfoot maintainers" }]
keywords = ["llm", "agents", "cost", "tokens", "observability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
dependencies = [
    "python-ulid>=2.2.0",
    "tiktoken>=0.7",
    # Token Contracts are loaded from YAML at runtime (instrument time
    # and in the CI gate), so the parser is a core dependency, not a
    # dev-only one.
    "pyyaml>=6",
    # python-ulid 2.x uses typing_extensions.Self; pin explicitly so a
    # fresh CI runner doesn't fail on the transitive miss.
    "typing_extensions>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-benchmark>=4",
    "pytest-cov>=4",
    # Property-based fuzzing of the streaming chunk-identity invariant.
    "hypothesis>=6",
    "pyyaml>=6",
    # Schema validation for the smell catalogue: used by the snapshot
    # build step and its tests. Not a runtime dependency — the shipped
    # snapshot is pre-validated, so the loader needs only the stdlib.
    "jsonschema>=4",
    # Renders the library site's per-smell pages; here so the site
    # generator's tests run in the default test job.
    "jinja2>=3.1",
    # The LangChain callback handler subclasses
    # ``langchain_core.callbacks.BaseCallbackHandler``, so unlike the
    # duck-typed framework adapters its unit tests need the real
    # package. langchain-core is pure-Python and light enough to sit
    # in dev so the default CI run covers the handler.
    "langchain-core>=0.3",
]

# Provider SDK extras. The shims auto-detect whichever SDKs are
# importable, so these are pure convenience pins — ``pip install
# inkfoot[gemini]`` gets a Gemini-instrumented environment in one
# step. (Anthropic and OpenAI SDKs are ubiquitous enough that we
# don't ship extras for them.)
gemini = [
    "google-generativeai>=0.8",
]
bedrock = [
    "boto3>=1.34",
]

# Storage backend extras. The default SQLite backend has no extra
# dependencies; the Postgres backend needs the psycopg3 stack.
postgres = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

# Framework adapter extras. Each one pulls in the peer
# framework as an optional install so ``pip install inkfoot[langgraph]``
# gets the user a working integration without bloating the default
# install. Versions are pinned conservatively against mid-2026
# stable releases; bump with the per-framework guide page on
# inkfoot.dev when upstream lands a breaking change.
langgraph = [
    # Validated against the 0.3.x and 1.0.x lines; the duck-typed
    # adapter tolerates both node/entry-point layouts.
    "langgraph>=0.2",
]
openai-agents = [
    # OpenAI Agents SDK; package name on PyPI is ``openai-agents``.
    "openai-agents>=0.1,<0.3",
]
anthropic-agent = [
    # Anthropic Agent SDK; package name on PyPI tentatively
    # ``anthropic-agent`` (subject to confirmation when the SDK GAs).
    "anthropic-agent>=0.1,<0.3",
]
pydantic-ai = [
    "pydantic-ai>=1.0,<2.0",
]
crewai = [
    "crewai>=0.100,<2.0",
]

# LangChain callback handler. Only langchain-core is required — the
# handler reads the LangChain-normalised ``usage_metadata``, so the
# per-provider partner packages (langchain-anthropic, langchain-openai,
# ...) stay the user's choice.
langchain = [
    "langchain-core>=0.3",
]

# Convenience meta-extra: install every framework adapter at
# once. This is the shape the ``inkfoot/diff-action`` GitHub
# Action installs in CI, so consumer scenarios can import any of
# the adapters without a per-extra dance.
all = [
    "inkfoot[langgraph,openai-agents,anthropic-agent,pydantic-ai,crewai,langchain,gemini,bedrock,postgres]",
]

# Docs site build deps. Installed by `pip install inkfoot[docs]`;
# CI's docs workflow uses the same extra so the build never falls
# out of sync with the dev recipe documented in the README.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.7",
]

# Lint + type-check toolchain. Kept out of the default dev install so a
# contributor running the tests doesn't have to wait on the linters;
# `pip install -e ".[dev,lint]"` (or the lint CI job) pulls them in.
# Ruff is both the formatter and the linter; mypy type-checks the
# package.
lint = [
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
inkfoot = "inkfoot.cli.main:main"

[project.urls]
Homepage = "https://inkfoot.dev"
Source = "https://github.com/inkfoot/inkfoot"
Issues = "https://github.com/inkfoot/inkfoot/issues"

[tool.setuptools.packages.find]
include = ["inkfoot*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Ship the bundled smell snapshot inside the wheel so the library works
# offline; it is regenerated from the catalogue at release time.
"inkfoot.library" = ["_snapshot.json"]

[tool.setuptools.dynamic]
version = { attr = "inkfoot._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_anthropic: tests that hit a real Anthropic endpoint (skipped without API key)",
    "live_openai: tests that hit a real OpenAI endpoint (skipped without API key)",
    "live_azure: tests that hit a real Azure OpenAI deployment (skipped without endpoint + key)",
    "live_gemini: tests that hit a real Gemini endpoint (skipped without API key)",
    "live_bedrock: tests that hit a real Bedrock endpoint (skipped without AWS credentials)",
    "live_ollama: tests that hit a local Ollama instance (skipped when unreachable)",
    "postgres: tests that need a real Postgres server (skipped without INKFOOT_TEST_PG_DSN)",
    "slow: tests that take more than a few seconds",
]
